# mlspec

./: .gitignore  Helper.hs  MLSpec.cabal  README  default.nix  shell.nix  test.sh
.issues/8545331fa6580c12/new/: 1501169677.M363737P31953Q1.nixos
.issues/e0631dca6175c650/new/: 1501169528.M643852P29157Q1.nixos  1501176046.M671858P23342Q1.nixos
.issues/ef7884bfad113126/new/: 1501246364.M857861P582Q1.nixos  1501247089.M855016P9199Q1.nixos
.issues/f7411081c17f8561/new/: 1501169559.M327527P31241Q1.nixos  1510169751.M838943P11557Q1.nixos
benchmarks/memory/: BenchAccBangEven.hs  BenchAccEven.hs  BenchEven.hs  BenchForce.hs  BenchLazy.hs  BenchNat.hs  BenchStrict.hs  BenchStrictHash.hs  Lib.hs
mlspec-exe/: Main.hs
quickspec-test/: Main.hs
src/: Main.hs
src/MLSpec/: Theory.hs
test/: Common.hs  Main.hs  TestData.hs
test-data/: hastily.formatted.1  list-extras.formatted.1  list-extras.formatted.11  list-extras.formatted.2  memory-bench.sh
test/data/: data-stringmap.clusters.json
