name:                mlspec
version:             0.2.1.1
synopsis:            Runs QuickSpec on sub-sets of Haskell definitions
homepage:            http://chriswarbo.net/git/mlspec
license:             PublicDomain
license-file:        LICENSE
author:              Chris Warburton
maintainer:          chriswarbo@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

source-repository head
  type:     git
  location: http://chriswarbo.net/git/mlspec.git

library
  exposed-modules:     MLSpec.Theory
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8
                     , hashable
                     , aeson
                     , stringable
                     , bytestring
                     , haskell-src-exts >= 1.17 && <1.18
                     , syb
                     , nix-eval
                     , quickspec
                     , QuickCheck
                     , template-haskell
                     , process
                     , MemoTrie
  hs-source-dirs:      src
  default-language:    Haskell2010

executable MLSpec
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.8
                     , mlspec
                     , text
  hs-source-dirs:      mlspec-exe
  default-language:    Haskell2010

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.8
                     , mlspec
                     , nix-eval
                     , MissingH
                     , process
                     , temporary
                     , directory
                     , hashable
                     , aeson
                     , stringable
                     , bytestring
                     , haskell-src-exts >= 1.17 && <1.18
                     , syb
                     , QuickCheck
                     , quickspec
                     , tasty >= 0.11.2.1
                     , tasty-quickcheck

-- These executables are actually tests. Since they test the output of commands,
-- it's hard to capture these commands as dependencies in Cabal. Instead, we
-- just build the executables, and use a separate system like Nix to ensure all
-- of the required commands are available.
executable mlspec-test-quickspec
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      quickspec-test, test
  build-depends:       base >= 4.8
                     , mlspec
                     , nix-eval
                     , MissingH
                     , process
                     , temporary
                     , directory
                     , hashable
                     , aeson
                     , stringable
                     , bytestring
                     , haskell-src-exts >= 1.17 && <1.18
                     , syb
                     , QuickCheck
                     , quickspec
                     , tasty >= 0.11.2.1
                     , tasty-quickcheck
